(On 1.4 we have Boolean.valueOf...)